# amartha-assessment

./: .gitignore  README.md  pyproject.toml
amartha_assessment/: cli.py
assets/: slide.md
modules/: config.py  gcs.py  utils.py
tests/fixtures/: .terraform.lock.hcl  main.tf
